# exercise-C-

./: README.md  appunti.pages  programmazione risposte.pages
10-6-20-p2/: CMakeLists.txt  main.cpp
10-6-20p1/: CMakeLists.txt  main.cpp
E10_Observer_exercise/: CMakeLists.txt  Display.h  GameCharacter.cpp  GameCharacter.h  MiniMapView.cpp  MiniMapView.h  Observer.h  Subject.h  VideogameMapView.cpp  VideogameMapView.h  main.cpp
E11_factory_method_exercise/: CMakeLists.txt  CharacterFactory.cpp  CharacterFactory.h  Knight.cpp  Knight.h  Wizard.cpp  main.cpp
E11_factory_method_exercise smart pointer/: CharacterFactory.cpp  CharacterFactory.h  GameCharacter.h  Wizard.h  main.cpp
E12_abstract_factory_exercise/: Button.h  CMakeLists.txt  IOSFactory.cpp  IOSFactory.h  Widget.h  WidgetFactory.h  Window.h  WindowsButton.cpp  WindowsButton.h  WindowsFactory.cpp  WindowsFactory.h  WindowsWindow.cpp  WindowsWindow.h  iOSButton.cpp  iOSButton.h  iOSWindow.cpp  iOSWindow.h  main.cpp
E9_adapter_exercise/: CMakeLists.txt  Shape.h  Sprite.cpp  Text.cpp  TextShapeAdaptter.cpp  TextShapeAdaptter.h  Tile.cpp  Tile.h  main.cpp
E9_adapter_exercise Object Adapter/: CMakeLists.txt  Shape.h  Sprite.h  Text.h  TextShapeAdapter.cpp  TextShapeAdapter.h  main.cpp
Esame mazzola ex5/: CMakeLists.txt  Document.cpp  Document.h  Image.cpp  Image.h  Playlist.cpp  (+4 more)
esercizio 6/: CMakeLists.txt  Observer.h  Srvcam.cpp  Srvcam.h  Srvcontrol.cpp  Srvcontrol.h  Subject.h  SurveillanceCamera.cpp  SurveillanceCamera.h  SurveillanceControl.cpp  SurveillanceControl.h  VideoStream.cpp  main.cpp
(+72 files in other folders)
